# OpenCLI

./: LICENSE  MANIFEST.in  README.md  project.toml  setup.cfg  setup.py
src/opencli/: config.py
src/opencli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/opencli/commands/: clear.py  echo.py  mkdir.py  pwd.py
src/opencli/manager/: __init__.py  command_manager.py  setup_manager.py  shell_launcher.py
src/opencli/shells/: bash.py  sh.py
tests/: test.py
