[metadata]
name = opencli
version = 1.0.1
author = BlazeMC404
author_email = blazemc404@example.com
description = Python framework for creating custom terminals and command-line shells
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BlazeMC404/OpenCLI
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License

[options]
packages = find:
install_requires =
    # add runtime dependencies here
    
python_requires = >=3.7
include_package_data = true
zip_safe = false

[options.entry_points]
console_scripts =
    opencli = opencli:setup  # invokes setup if no args, or consider creating a runner

[flake8]
max-line-length = 88
exclude = .git,__pycache__,build